platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_13.platter
flag of x = X + 1 > "asd";
start() {}